[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/texttospeech/TextToSpeech.gd" type="Script" id=1]
[ext_resource path="res://addons/speechtotext/SpeechToText.gd" type="Script" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0, 1.85427e-29 )
colors = PoolColorArray( 0.788235, 0.0431373, 0.0431373, 1, 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
width = 1024
height = 600
fill_from = Vector2( 0.576471, 0.691326 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextToSpeech" type="AudioStreamPlayer" parent="."]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="SpeechToText" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.5
margin_top = -3.0
margin_right = 25.5
margin_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
icon = SubResource( 2 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
